--- a/templates/dashboards/all_teacher_pages/attendance_month_detail.html
+++ b/templates/dashboards/all_teacher_pages/attendance_month_detail.html
@@ -5,14 +5,14 @@
 
 <div class="m-3 p-3 rounded-lg" style="background-color: #F9F9F9;">
 
-<h1>Attendance for {{ student_class.name }} - {{ month }}/{{ year }}</h1>
+<h1 class="text-2xl font-bold mb-4">Attendance for {{ student_class.name }} - {{ month }}/{{ year }}</h1>
 
 <table class="min-w-full border-collapse border border-zinc-400 mb-6">
     <thead>
         <tr>
             <th class="border border-zinc-400 bg-blue-200 p-1">STUDENT NAME</th>
             {% for day, weekday_name in weekdays %}
-                <th class="border border-zinc-400 bg-blue-200 p-1">{{ day }}</th>
+            <th class="border border-zinc-400 bg-blue-200 p-1">{{ day }}</th>
             {% endfor %}
         </tr>
     </thead>
@@ -264,6 +264,17 @@
                                     --
                                 {% endif %}
                             </td>
+                            <td class="border border-gray-300 p-1">
+                                {% if record.status23 == "A" %}
+                                    <i class="fa fa-times text-red-500"></i>
+                                {% elif record.status23 == "P" %}
+                                    <i class="fa fa-check text-green-500"></i>
+                                {% elif record.status23 == "D" %}
+                                    --
+                                {% else %}
+                                    --
+                                {% endif %}
+                            </td>
                     {% else %}
                     <td class="border border-gray-300 p-1">
                         <i class="fa fa-minus text-gray-500"></i> <!-- No record -->
@@ -271,9 +282,9 @@
                     {% endif %}
                 {% endwith %}
             </tr>
-        {% endfor %}
-    </tbody>
-    
-</table>
+            {% endfor %}
+        </tbody>
+    </table>
+   <a class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg mt-5"  href="{% url 'update_attendance' class_id=classes.id year=year month=month %}">Update Attendance</a>
 </div>
 {% endblock section %}
