--- a/templates/dashboards/all_teacher_pages/class_details.html
+++ b/templates/dashboards/all_teacher_pages/class_details.html
@@ -90,301 +90,20 @@
     <p class="text-right p-3 mt-3  font-normal text-white"><a href="{%url 'delete_class' class_id=class.id%}" class="bg-red-500 p-3 rounded-lg">Delete Class</a></p>
     {%else%}
     {%endif%}
-
     <p class="text-center p-5 mb-3 rounded-lg font-medium text-gray-600 mt-3" style="background-color: #F9F9F9;">{{class.name}} Attendance Record</p>
-
     <div class="p-3 rounded-lg" style="background-color: #F9F9F9;">
-        <h2>Attendance Records for {{ month }}</h2>
-        {% for record in attendance_by_month %}
-            <li>
-                <a href="{% url 'attendance_detail' class_id=class.id year=record.date__year month=record.date__month %}">
-                    {{ record.date__month|get_month_name }} {{ record.date__year }} - Total Records: {{ record.total }}
-                </a>
-            </li>
-        {% empty %}
-            <li>No attendance records found.</li>
-        {% endfor %}
-    </ul>
-
         <h1 class="text-2xl font-bold mb-4">MONTHLY ATTENDANCE SHEET</h1>
-        <table class="min-w-full border-collapse border border-zinc-400 mb-6">
-            <thead>
-                <tr>
-                    <th class="border border-zinc-400 bg-blue-200 p-1">STUDENT NAME</th>
-                    {% for day, label, weekday_count in weekdays_in_month %}
-                        <th class="border border-zinc-400 bg-{{ label|lower }}-200 p-1">
-                            {{ day }}<br>{{ label }}
-                        </th>
-                    {% endfor %}
-                </tr>
-            </thead>
-            <tbody>
-                {% for student in students %}
-                    <tr>
-                        <td class="border border-zinc-400 p-1">{{ student }}</td>
-                        {% with records=attendance_records|get_item:student.id %}
-                            {% if records %}
-                                {% for record in records %}
-                                <td class="border border-gray-300 p-1">
-                                    {% if record.status1 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status1 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status1 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status2 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status2 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status2 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status3 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status3 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status3 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status4 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status4 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status4 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status5 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status5 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status5 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status6 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status6 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status6 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status7 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status7 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status7 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status8 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status8 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status8 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status9 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status9 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status9 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status10 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status10 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status10 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status11 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status11 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status11 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status12 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status12 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status12 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status13 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status13 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status13 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status14 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status14 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status14 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status15 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status15 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status15 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status16 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status16 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status16 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status17 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status17 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status17 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status18 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status18 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status18 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status19 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status19 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status19 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status20 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status20 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status20 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status21 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status21 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status21 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                    <td class="border border-gray-300 p-1">
-                                        {% if record.status22 == "A" %}
-                                            <i class="fa fa-times text-red-500"></i>
-                                        {% elif record.status22 == "P" %}
-                                            <i class="fa fa-check text-green-500"></i>
-                                        {% elif record.status22 == "D" %}
-                                            --
-                                        {% else %}
-                                            --
-                                        {% endif %}
-                                    </td>
-                                {% endfor %}
-                            {% else %}
-                            <td class="border border-gray-300 p-1">
-                                <i class="fa fa-minus text-gray-500"></i> <!-- No record -->
-                                </td>
-                            {% endif %}
-                        {% endwith %}
-                    </tr>
-                {% endfor %}
-            </tbody>
-            
-        </table>
-        
-        <a class="text-left py-2 px-3 my-3 font-normal text-white bg-blue-500 rounded-lg mt-5" href="{% url 'update_attendance' class_id=class.id %}" class="btn btn-primary">
-            Update Attendance
-        </a>
-                    
-    </div>
-                
+        <div>
+            {% for record in attendance_by_month %}
+                <li class="my-3">
+                    <a class="text-2xl border-b-2 border-gray-400" href="{% url 'attendance_detail' class_id=class.id year=record.date__year month=record.date__month %}">
+                        {{ record.date__month|get_month_name }} {{ record.date__year }} - Total Records Of Students: {{ record.total }}
+                    </a>
+                </li>
+            {% empty %}
+                <li>No attendance records found.</li>
+            {% endfor %}
+        </div>         
+    </div>            
 </div>
 {%endblock section%}
