--- a/templates/dashboards/base.html
+++ b/templates/dashboards/base.html
@@ -46,7 +46,13 @@
         font-weight: bold;
         text-align: center;
         padding: 10px 0 20px 0;
-}
+    }
+    .final-grade {
+        width: 100%;
+        border: 1px solid rgb(142, 141, 141); /* Corrected border property */
+        border-radius: 5px; /* Apply rounded corners */
+        padding: 4px;
+    }
 
 </style>
 <body>
