--- a/templates/dashboards/all_admin_pages/teacher_details.html
+++ b/templates/dashboards/all_admin_pages/teacher_details.html
@@ -2,14 +2,15 @@
 {% load static %}
 {% block section %}
 <div class="m-3 rounded-lg">
-            <section class="bg-background flex flex-col items-center justify-center text-black">
-                <div class="bg-card w-full max-w-3xl rounded-lg shadow-lg overflow-hidden">
-                  {% if messages %}
+  <section class="bg-background flex flex-col items-center justify-center text-black">
+    <div class="bg-card w-full max-w-3xl rounded-lg shadow-lg overflow-hidden">
+      {% if messages %}
                   {% for message in messages %}
                   <h3 class="bg-blue-100 text-blue-500 p-3 text-normal font-normal mb-6">{{ message }}</h3>
                   {% endfor %}
                   {% endif %}
                   <div class="py-8 px-4" style="background-color: #F9F9F9;">
+                    <div class="text-left text-right mb-5 text-sm md:text-base text-white"><a href="{%url 'assign_teacher' teacher_id=teacher.id%}" class="bg-blue-500 p-2 rounded-lg">Assign Teacher</a></div>
                     <a href="{{ teacher.user.profile_photo.url }}" data-lightbox="user-image" data-title="{{teacher.user.first_name}} {{teacher.user.last_name}}">
                     <img src="{{teacher.user.profile_photo.url}}" alt="{{teacher.user.first_name}} {{teacher.user.last_name}}" style="height: 200px; width: 300px;" class="rounded-lg mx-auto border-4 border-background" />
                     </a>
@@ -34,8 +35,8 @@
                           </ul>
                         </div>
                         <div class="flex">
-                          <div class="text-left p-3 mb-3 font-normal text-white"><a href="{%url 'edit_teacher' teacher_id=teacher.id%}" class="bg-blue-500 p-3 rounded-lg">Edit Teacher</a></div>
-                          <div class="text-left p-3 mb-3 font-normal text-white text-right"><a href="{%url 'delete_teacher' teacher_id=teacher.id%}" class="bg-red-500 p-3 rounded-lg">Delete Teacher</a></div>
+                          <div class="text-left p-3 mb-3 text-sm md:text-base text-white"><a href="{%url 'edit_teacher' teacher_id=teacher.id%}" class="bg-blue-500 p-3 rounded-lg">Edit Teacher</a></div>
+                          <div class="text-left p-3 mb-3 text-sm md:text-base text-white text-right"><a href="{%url 'delete_teacher' teacher_id=teacher.id%}" class="bg-red-500 p-3 rounded-lg">Delete Teacher</a></div>
                         </div>
                       </div>
                 </div>
