--- a/templates/dashboards/all_teacher_pages/student_details.html
+++ b/templates/dashboards/all_teacher_pages/student_details.html
@@ -23,6 +23,7 @@
                         <li>Class: {{ student.student_class }}</li>
                     </ul>
                 </div>
+                <div class="text-left p-3 mb-3 font-normal text-white"><a href="{%url 'create_grade' student_id=student.id%}" class="bg-blue-500 p-3 rounded-lg">Grade Student</a></div>
                 {%if request.user.is_superuser%}
                 <div class="bg-card p-4 rounded-lg my-4">
                     <h2 class="text-lg font-bold">Contact</h2>
