--- a/templates/dashboards/all_admin_pages/edit_student.html
+++ b/templates/dashboards/all_admin_pages/edit_student.html
@@ -13,31 +13,31 @@
         {% csrf_token %}
 
         <div class="mb-4">
-            {{ form.student_class.label_tag }}
+          <p class="text-lg font-medium text-gray-700 mb-1">{{ form.student_class.label_tag }}</p>
             {{ form.student_class }}
           </div>
       
           <div class="mb-6">
-            {{ form.phone_number.label_tag }}
+            <p class="text-lg font-medium text-gray-700 mb-1">{{ form.phone_number.label_tag }}</p>
             {{ form.phone_number }}
           </div>
           <div class="mb-6">
-            {{ form.home_address.label_tag }}
+            <p class="text-lg font-medium text-gray-700 mb-1">{{ form.home_address.label_tag }}</p>
             {{form.home_address}}
           </div>
       
           <div class="mb-4">
-            {{ form.parent_or_guardian_name.label_tag }}
+            <p class="text-lg font-medium text-gray-700 mb-1">{{ form.parent_or_guardian_name.label_tag }}</p>
             {{form.parent_or_guardian_name}}
           </div>
       
           <div class="mb-4">
-            {{ form.parent_or_guardian_phone_number.label_tag }}
+            <p class="text-lg font-medium text-gray-700 mb-1">{{ form.parent_or_guardian_phone_number.label_tag }}</p>
             {{form.parent_or_guardian_phone_number}}
           </div>
       
           <div class="mb-4">
-            {{ form.parent_email.label_tag }}
+            <p class="text-lg font-medium text-gray-700 mb-1">{{ form.parent_email.label_tag }}</p>
             {{form.parent_email}}
           </div>
   
