--- a/templates/dashboards/all_teacher_pages/create_grade.html
+++ b/templates/dashboards/all_teacher_pages/create_grade.html
@@ -15,7 +15,7 @@
         <div class="mb-4">
             <p class="text-muted-foreground">A - Excellent | B - Very Good | C - Average | D - Below Average | F - Poor | G - No Effort</p>
         </div>
-        <form action="" method="post">
+        <form action="{%url 'create_grade' student.id%}" method="post">
             {% csrf_token %}
             <table class="w-full border-collapse">
                 <thead>
@@ -29,12 +29,18 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="border border-border p-2">{{ form.subject1 }}</td>
-                        <td class="border border-border p-2">{{ form.subject2 }}</td>
+                        <td class="border border-border p-2">{{ form.subject }}</td>
                         <td class="border border-border p-2">{{ form.first_test }}</td>
                         <td class="border border-border p-2">{{ form.second_test }}</td>
                         <td class="border border-border p-2">{{ form.exam }}</td>
                         <td class="border border-border p-2">{{ form.grade }}</td>
+                    </tr>
+                    <tr>
+                        <td class="border border-border p-2">{{ form.subject2 }}</td>
+                        <td class="border border-border p-2">{{ form.first_test2 }}</td>
+                        <td class="border border-border p-2">{{ form.second_test2 }}</td>
+                        <td class="border border-border p-2">{{ form.exam2 }}</td>
+                        <td class="border border-border p-2">{{ form.grade2 }}</td>
                     </tr>
                 </tbody>
             </table>
