--- a/templates/dashboards/all_teacher_pages/second_test_form.html
+++ b/templates/dashboards/all_teacher_pages/second_test_form.html
@@ -1,10 +1,31 @@
 {% extends 'dashboards/all_teacher_pages/base.html' %}
 {% load static %}
-{% block section %}
-<p>second test</p>
-<form action="" method="post">
-    {%csrf_token%}
-    {{form.as_p}}
-    <button type="submit">submit</button>
-</form>
+{% block section %} 
+<p class="text-center p-5 m-3 rounded-lg font-medium text-gray-600" style="background-color: #F9F9F9;">Second Test Grade</p>
+<div class="p-6 m-3 rounded-lg" style="background-color: #F9F9F9;">
+    <form action="" method="post">
+        {%csrf_token%}
+        <div class="mb-3">
+            <p>{{form.subject.label_tag}}</p>
+            {{form.subject}}
+        </div>
+        <div class="mb-3">
+            <p>{{form.term.label_tag}}</p>
+            {{form.term}}
+        </div>
+        <div class="mb-3">
+            <p>{{form.year.label_tag}}</p>
+            {{form.year}}
+        </div>
+        <div class="mb-3">
+            <p>{{form.score.label_tag}}</p>
+            {{form.score}}
+        </div>
+        <div class="mb-4">
+            <p>{{form.out_of.label_tag}}</p>
+            {{form.out_of}}
+        </div>
+        <button class="bg-blue-500 text-white py-1 px-3 rounded-lg" type="submit">submit</button>
+    </form>
+</div>
 {% endblock section %}
