--- a/templates/dashboards/all_admin_pages/teacher_details.html
+++ b/templates/dashboards/all_admin_pages/teacher_details.html
@@ -25,6 +25,7 @@
                               <li>Classes: {{teacher.classes.all|join:", "}}</li>
                             </ul>
                         </div>
+                        {% if request.user.is_superuser%}
                         <div class="bg-card p-4 rounded-lg my-4">
                           <h2 class="text-lg font-bold">Contact</h2>
                           <ul class="text-sm mt-2">
@@ -34,10 +35,14 @@
                             <li>Emergency Contact: {{teacher.emergency_contact}}</li>
                           </ul>
                         </div>
+                        {%endif%}
+                        {%if request.user.is_superuser%}
                         <div class="flex">
                           <div class="text-left p-3 mb-3 text-sm md:text-base text-white"><a href="{%url 'edit_teacher' teacher_id=teacher.id%}" class="bg-blue-500 p-3 rounded-lg">Edit Teacher</a></div>
                           <div class="text-left p-3 mb-3 text-sm md:text-base text-white text-right"><a href="{%url 'delete_teacher' teacher_id=teacher.id%}" class="bg-red-500 p-3 rounded-lg">Delete Teacher</a></div>
                         </div>
+                        {%else%}
+                        {%endif%}
                       </div>
                 </div>
               </section>
