--- a/templates/dashboards/all_teacher_pages/student_details.html
+++ b/templates/dashboards/all_teacher_pages/student_details.html
@@ -10,6 +10,7 @@
             {% endfor %}
             {% endif %}
             <div class="py-8 px-4" style="background-color: #F9F9F9;">
+                <div class="text-left text-right mb-5 text-sm md:text-base text-white"><a href="{%url 'report_card' student_id=student.id%}" class="bg-blue-500 p-2 rounded-lg">Report Card</a></div>
                 <a href="{{ student.user.profile_photo.url }}" data-lightbox="user-image" data-title="{{student.user.first_name}} {{student.user.last_name}}">
                     <img src="{{ student.user.profile_photo.url }}" alt="{{ student.user.first_name }} {{ student.user.last_name }}" style="height: 200px; width: 300px;" class="rounded-lg mx-auto border-4 border-background" />
                 </a>
@@ -23,8 +24,8 @@
                         <li>Class: {{ student.student_class }}</li>
                     </ul>
                 </div>
-                <div class="text-left p-3 mb-3 font-normal text-white"><a href="{%url 'choose_grade' student_id=student.id%}" class="bg-blue-500 p-3 rounded-lg">Grade Student</a></div>
-                <div class="text-left p-3 mb-3 font-normal text-white"><a href="{%url 'view_student_grades' student_id=student.id%}" class="bg-blue-500 p-3 rounded-lg">View Student Grades</a></div>
+                <div class="text-left p-3 mb-3 font-normal text-white"><a href="{%url 'grade_student' student_id=student.id%}" class="bg-blue-500 p-3 rounded-lg">Grade Student</a></div>
+                <div class="text-left p-3 mb-3 font-normal text-white"><a href="#" class="bg-blue-500 p-3 rounded-lg">View Student Grades</a></div>
 
                 {%if request.user.is_superuser%}
                 <div class="bg-card p-4 rounded-lg my-4">
